--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <title>Snake Game</title>
   </head>
   <body>
-    <div class="container mt-5 border">
+    <div class="container mt-5 border shadow rounded">
       <div>
-        <h1>Snake Game</h1>
-        <button class="btn btn-secondary">Start/Restart</button>
-        <h2>Score: <span id="score"> 0</span></h2>
+        <h1 class="pb-5">Snake Game</h1>
+        <button class="btn btn-branding shadow mb-5">Start/Restart</button>
+        <h2 class="pb-5">Score: <span id="score">0</span></h2>
         <div class="grid"></div>
       </div>
     </div>
