--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     <div class="container mt-5 border shadow rounded">
       <div>
         <h1 class="pb-5">Snake Game</h1>
-        <button class="btn btn-branding shadow mb-5">Start/Restart</button>
+        <button id="start" class="btn btn-branding shadow mb-5">
+          Start/Restart
+        </button>
         <h2 class="pb-5">Score: <span id="score">0</span></h2>
         <div class="grid"></div>
       </div>
