--- a/index.html
+++ b/index.html
@@ -4,23 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+
     <link rel="stylesheet" href="style.css" />
     <title>Snake Game</title>
   </head>
   <body>
-    <div class="container mt-5 border shadow rounded">
+    <div class="container">
       <div>
-        <h1 class="pb-5">Snake Game</h1>
-        <button id="start" class="btn btn-branding shadow mb-5">
-          Start/Restart
-        </button>
-        <h2 class="pb-5">Score: <span id="score">0</span></h2>
+        <h1>Snake Game</h1>
+        <button id="start" class="btn">Start/Restart</button>
+        <h2>Score: <span id="score">0</span></h2>
         <div class="grid"></div>
       </div>
     </div>
