set up and hid restart button

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="container">
       <div>
         <h1>Snake Game</h1>
-        <button id="start" class="btn">Start/Restart</button>
+        <button id="start" class="btn">Start</button>
+        <button id="restart" class="btn">Restart</button>
         <h2>Score: <span id="score">0</span></h2>
         <div class="grid"></div>
       </div>
